<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:title="@string/main_reb"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/reb" />
    
    <item
        android:title="@string/main_soft"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/soft" />
    
    <item
        android:title="@string/main_bl"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/bl" />
    
    <item
        android:title="@string/main_rec"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/rec" />
    
    <item
        android:title="@string/main_9008"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/re9008" />
</menu >
